--- a/style/global.css
+++ b/style/global.css
@@ -8,4 +8,8 @@
     cursor-pointer hover:scale-125
    transition-all duration-150 ease-out;
   }
+
+  .btn {
+    @apply h-6 hover:scale-125 transition-all duration-150 ease-out;
+  }
 }
